mobile, tablet and desktop view points constructed

--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 <head>
     <title>InstaNews RED</title>
     <link rel="stylesheet" href="../build/css/style.min.css">
+    <meta charset="utf-8">
 </head>
 <body>
     <h1>instanews</h1>
-    <div class="container1">
-        <div class="image">
-            <img src="./images/nyt-logo.svg">
-        </div>
+    <div class="container">
+        <img src="./images/nyt-logo.svg">
         <div class="selectcontain">
             <h2>Choose a section:</h2>
             <select name="select" id="selector">
                 <option value="default">sections..</option>
                 <option value="home">home</option>
-                <option value="music">music</option>
-                <option value="design">design</option>
-                <option value="dev">dev</option>
-            </select
+                <option value="music">art</option>
+                <option value="design">technology</option>
+                <option value="dev">sports</option>
+            </select>
         </div>
     </div>
-     <p>© Copyright 2016 INSTANEWS</p>
+    <div class="footer">
+        <p>© Copyright 2016 INSTANEWS</p>
+    </div>
     <script src="vender/js/jquery-3.1.1.min.js"></script>
     <script src="build/js/main.min.js"></script>
 </body>
