--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>InstaNews RED</title>
-    <link rel="stylesheet" href="../build/css/style.min.css">
+    <link rel="stylesheet" href="build/css/style.min.css">
     <meta charset="utf-8">
 </head>
+
 <body>
     <h1>instanews</h1>
     <div class="container">
-        <img src="./images/nyt-logo.svg">
+        <img src="./images/nyt-logo.svg" alt="New York times logo">
         <div class="selectcontain">
             <h2>Choose a section:</h2>
             <select name="select" id="selector">
-                <option value="default">sections..</option>
+                <option>sections..</option>
                 <option value="home">home</option>
-                <option value="music">art</option>
-                <option value="design">technology</option>
-                <option value="dev">sports</option>
+                <option value="science">science</option>
+                <option value="business">business</option>
+                <option value="sports">sports</option>
             </select>
+        </div>
+        <div class="loading">
+            <img src="images/ajax-loader.gif" alt="">
+        </div>
+    </div>
+    <div class="newsContainer">
+        <div class="newsGrid">
+            <ul class="news" id="news"></ul>
         </div>
     </div>
     <div class="footer">
@@ -26,4 +36,5 @@
     <script src="vender/js/jquery-3.1.1.min.js"></script>
     <script src="build/js/main.min.js"></script>
 </body>
+
 </html>
