loading gif positioned

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
                 <option value="sports">sports</option>
             </select>
         </div>
-        <div class="loading">
-            <img src="images/ajax-loader.gif" alt="">
-        </div>
+    </div>
+
+    <div class="loading">
+        <img src="images/ajax-loader.gif" alt="">
+        <p>Fetching your news...</p>
     </div>
 
     <div class="newsContainer">
