--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>InstaNews RED</title>
     <link rel="stylesheet" href="build/css/style.min.css">
+    <link rel="stylesheet" href="selectric.css">
     <meta charset="utf-8">
 </head>
 
@@ -13,6 +14,7 @@
         <img src="./images/nyt-logo.svg" alt="New York times logo">
         <div class="selectcontain">
             <h2>Choose a section:</h2>
+            
             <select name="select" id="selector">
                 <option>sections..</option>
                 <option value="home">home</option>
@@ -35,6 +37,7 @@
         <p>© Copyright 2016 INSTANEWS</p>
     </div>
     
+    </script>
     <script src="vender/js/jquery-3.1.1.min.js"></script>
     <script src="build/js/main.min.js"></script>
 </body>
