--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>InstaNews RED</title>
     <link rel="stylesheet" href="build/css/style.min.css">
-    <link rel="stylesheet" href="selectric.css">
+    <link rel="stylesheet" href="vender/css/selectric.css">
     <meta charset="utf-8">
 </head>
 
@@ -39,6 +39,8 @@
     
     </script>
     <script src="vender/js/jquery-3.1.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    /*<script src="vender/js/jquery.selectric.js"></script>*/
     <script src="build/js/main.min.js"></script>
 </body>
 
