--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </script>
     <script src="vender/js/jquery-3.1.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    /*<script src="vender/js/jquery.selectric.js"></script>*/
+    <script src="vender/js/jquery.selectric.js"></script>
     <script src="build/js/main.min.js"></script>
 </body>
 
