--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>InstaNews RED</title>
     <link rel="stylesheet" href="build/css/style.min.css">
-    <link rel="stylesheet" href="sass/selectric.scss">
+    <link rel="stylesheet" href="sass/_selectric.scss">
     <meta charset="utf-8">
 </head>
 
