changed story count Mobile width min width

--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
             <h2>Choose a section:</h2>
 
             <select name="select" id="selector">
-                <option>sections..</option>  
+                <option>sections..</option>
                 <option value="home">home</option>
                 <option value="science">science</option>
                 <option value="business">business</option>
                 <option value="sports">sports</option>
+                <option value="movies">movies</option>
+                <option value="food">food</option>
+                <option value="arts">arts</option>
+                <option value="fashion">fashion</option>
             </select>
         </div>
     </div>
